--- a/resources/mubble/lang/nl_nl.lang
+++ b/resources/mubble/lang/nl_nl.lang
@@ -17,17 +17,17 @@ tile.empty_block.name=Leeg blok
 tile.rotating_block.name=Draaiend blok
 tile.light_block.name=Licht blok
 tile.brick_block.name=Baksteenblok
-tile.golden_brick_block.name=Goude baksteenblok
+tile.golden_brick_block.name=Gouden baksteenblok
 tile.note_block.name=Nootblok
 tile.super_note_block.name=Super nootblok
 
-tile.blue_tetris_block.name=Blauwe Tetris blok
-tile.green_tetris_block.name=Groene Tetris blok
-tile.yellow_tetris_block.name=Gele Tetris blok
+tile.blue_tetris_block.name=Blauw Tetris blok
+tile.green_tetris_block.name=Groen Tetris blok
+tile.yellow_tetris_block.name=Geel Tetris blok
 tile.orange_tetris_block.name=Oranje Tetris blok
-tile.red_tetris_block.name=Rode Tetris blok
-tile.purple_tetris_block.name=Paarse Tetris blok
-tile.gray_tetris_block.name=Grijze Tetris blok
+tile.red_tetris_block.name=Rood Tetris blok
+tile.purple_tetris_block.name=Paars Tetris blok
+tile.gray_tetris_block.name=Grijs Tetris blok
 
 item.vanadium.name=Vanadium
 item.wheat_flour.name=Tarwemeel
@@ -48,5 +48,5 @@ entity.toad.name=Toad
 subtitles.block.question_block.loot=?-blok plundert
 subtitles.block.question_block.loot_coin=?-blok laat munt vallen
 subtitles.entity.toad.ambient=Toad mompelt
-subtitles.entity.toad.hurt=Toad leid
+subtitles.entity.toad.hurt=Toad heeft pijn
 subtitles.entity.toad.death=Toad sterft
