--- a/resources/assets/mubble/lang/es_es.lang
+++ b/resources/assets/mubble/lang/es_es.lang
@@ -5,8 +5,8 @@ tile.vanadium_block.name=Bloque de vanadio
 tile.vanadium_ore.name=Mena de vanadio
 tile.red_bricks.name=Ladrillos rojos
 tile.white_bricks.name=Ladrillos blancos
-tile.blunite.name=Blunita
-tile.polished_blunite.name=Blunita pulida
+tile.blunite.name=Blunito
+tile.polished_blunite.name=Blunito pulido
 tile.carbonite.name=Carbonita
 tile.polished_carbonite.name=Carbonita pulida
 
