--- a/resources/assets/mubble/lang/zh_cn.lang
+++ b/resources/assets/mubble/lang/zh_cn.lang
@@ -21,12 +21,23 @@ tile.note_block.name=音符块
 tile.super_note_block.name=超级音符块
 
 tile.blue_tetris_block.name=蓝色俄罗斯方块
+tile.light_blue_tetris_block.name=<newline>
 tile.green_tetris_block.name=绿色俄罗斯方块
 tile.yellow_tetris_block.name=黄色俄罗斯方块
 tile.orange_tetris_block.name=橙色俄罗斯方块
 tile.red_tetris_block.name=红色俄罗斯方块
 tile.purple_tetris_block.name=紫色俄罗斯方块
 tile.gray_tetris_block.name=灰色俄罗斯方块
+tile.tetris_glass.name=<newline>
+tile.japanese_tetris_cushion.name=<newline>
+tile.rainbow_tetris_scaffolding.name=<newline>
+tile.monochrome_tetris_scaffolding.name=<newline>
+
+tile.iron_scaffolding.name=<newline>
+tile.purple_bricks.name=<newline>
+tile.cyan_bricks.name=<newline>
+tile.elder_pebbles.name=<newline>
+tile.space_matter.name=<newline>
 
 item.vanadium.name=钒
 item.wheat_flour.name=小麦面粉
@@ -41,6 +52,7 @@ item.super_star.name=无敌星
 item.yellow_coin.name=黄币
 item.red_coin.name=红币
 item.blue_coin.name=蓝币
+item.cappy.name=<newline>
 
 item.record.champions_road.desc=Super Mario 3D World - Champion's Road
 item.record.ebb_flow_demo.desc=Splatoon 2 - Ebb & Flow Demo
