Small fixes in languages files
Updated subtitles.block.question_block.loot to be subtitles.block.question_block.loot.super_mushroom (needs to say that the super_mushroom is dropped, see <super mushroom>)

--- a/resources/assets/mubble/lang/es_es.lang
+++ b/resources/assets/mubble/lang/es_es.lang
@@ -59,8 +59,8 @@ item.record.ebb_flow_demo.desc=Splatoon 2 - Ebb & Flow Demo
 
 entity.toad.name=Toad
 
-subtitles.block.question_block.loot=Bloque ? suelta un ítem
-subtitles.block.question_block.loot_coin=Bloque ? suelta una moneda
+subtitles.block.question_block.loot.super_mushroom=Bloque ? suelta un súper champiñón
+subtitles.block.question_block.loot.coin=Bloque ? suelta una moneda
 subtitles.entity.toad.ambient=Toad balbucea
 subtitles.entity.toad.hurt=Toad herido
 subtitles.entity.toad.death=Toad muere
