missing strings in other languages added as <newline>, and fixed small grammar mistake in en_us

--- a/resources/assets/mubble/lang/en_us.lang
+++ b/resources/assets/mubble/lang/en_us.lang
@@ -72,4 +72,4 @@ advancements.mubble.get_coin.description=Find coins
 advancements.mubble.get_vanadium.title=Vanadiums!
 advancements.mubble.get_vanadium.description=Acquire vanadiums
 advancements.mubble.get_tetris_block.title=It's All Connected
-advancements.mubble.get_tetris_block.description=Get the hand on a Tetris Block
+advancements.mubble.get_tetris_block.description=Get your hand on a Tetris Block
