--- a/resources/assets/mubble/lang/nl_nl.lang
+++ b/resources/assets/mubble/lang/nl_nl.lang
@@ -64,3 +64,12 @@ subtitles.block.question_block.loot.coin=?-blok laat munt vallen
 subtitles.entity.toad.ambient=Toad mompelt
 subtitles.entity.toad.hurt=Toad heeft pijn
 subtitles.entity.toad.death=Toad sterft
+
+advancements.mubble.root.title=Mubble
+advancements.mubble.root.description=Een grandioos nieuw avontuur
+advancements.mubble.get_coin.title=Het is van mij! Goud!
+advancements.mubble.get_coin.description=Vind munten
+advancements.mubble.get_vanadium.title=Vanadiums!
+advancements.mubble.get_vanadium.description=Verkrijg vanadiums
+advancements.mubble.get_tetris_block.title=Het is allemaal verbonden
+advancements.mubble.get_tetris_block.description=Krijg je handen aan een Tetris blok
