--- a/resources/assets/mubble/lang/zh_cn.lang
+++ b/resources/assets/mubble/lang/zh_cn.lang
@@ -64,3 +64,12 @@ subtitles.block.question_block.loot.coin=问号块:掉落硬币
 subtitles.entity.toad.ambient=奇诺比奥:咕哝
 subtitles.entity.toad.hurt=奇诺比奥:受伤
 subtitles.entity.toad.death=奇诺比奥:死亡
+
+advancements.mubble.root.title=<newline>
+advancements.mubble.root.description=<newline>
+advancements.mubble.get_coin.title=<newline>
+advancements.mubble.get_coin.description=<newline>
+advancements.mubble.get_vanadium.title=<newline>
+advancements.mubble.get_vanadium.description=<newline>
+advancements.mubble.get_tetris_block.title=<newline>
+advancements.mubble.get_tetris_block.description=<newline>
