--- a/resources/assets/mubble/lang/lol_us.lang
+++ b/resources/assets/mubble/lang/lol_us.lang
@@ -65,11 +65,11 @@ subtitles.entity.toad.ambient=tod bups
 subtitles.entity.toad.hurt=todtod oofs
 subtitles.entity.toad.death=tod ded
 
-advancements.mubble.root.title=<newline>
-advancements.mubble.root.description=<newline>
-advancements.mubble.get_coin.title=<newline>
-advancements.mubble.get_coin.description=<newline>
-advancements.mubble.get_vanadium.title=<newline>
-advancements.mubble.get_vanadium.description=<newline>
-advancements.mubble.get_tetris_block.title=<newline>
-advancements.mubble.get_tetris_block.description=<newline>
+advancements.mubble.root.title=Mubble
+advancements.mubble.root.description=woohoo adventur
+advancements.mubble.get_coin.title=gimme money!!1!
+advancements.mubble.get_coin.description=find zooz coinz 
+advancements.mubble.get_vanadium.title=purple in da poket
+advancements.mubble.get_vanadium.description=get da shiny purple thingy
+advancements.mubble.get_tetris_block.title=falin in th sky
+advancements.mubble.get_tetris_block.description=OBTAIN a titris bloks
