--- a/resources/assets/mubble/lang/fr_fr.lang
+++ b/resources/assets/mubble/lang/fr_fr.lang
@@ -65,11 +65,11 @@ subtitles.entity.toad.ambient=Toad qui parle
 subtitles.entity.toad.hurt=Toad qui souffre
 subtitles.entity.toad.death=Toad qui meurt
 
-advancements.mubble.root.title=<newline>
-advancements.mubble.root.description=<newline>
-advancements.mubble.get_coin.title=<newline>
-advancements.mubble.get_coin.description=<newline>
-advancements.mubble.get_vanadium.title=<newline>
-advancements.mubble.get_vanadium.description=<newline>
-advancements.mubble.get_tetris_block.title=<newline>
-advancements.mubble.get_tetris_block.description=<newline>
+advancements.mubble.root.title=Mubble
+advancements.mubble.root.description=Un tout nouveau voyage
+advancements.mubble.get_coin.title=C'est à moi ! De l'or !
+advancements.mubble.get_coin.description=Trouvez des pièces
+advancements.mubble.get_vanadium.title=Du vanadium !
+advancements.mubble.get_vanadium.description=Obtenez du vanadium
+advancements.mubble.get_tetris_block.title=Connectés à travers l'espace
+advancements.mubble.get_tetris_block.description=Attrapez un bloc Tetris
