--- a/resources/assets/mubble/lang/fr_fr.lang
+++ b/resources/assets/mubble/lang/fr_fr.lang
@@ -61,8 +61,8 @@ entity.toad.name=Toad
 
 subtitles.block.question_block.loot.super_mushroom=Super champignon sorti d'un bloc ?
 subtitles.block.question_block.loot.coin=Pièce sortie d'un bloc ?
-subtitles.entity.toad.ambient=Toad qui parle
-subtitles.entity.toad.hurt=Toad qui souffre
+subtitles.entity.toad.ambient=Marmonnement de Toad
+subtitles.entity.toad.hurt=Toad blessé
 subtitles.entity.toad.death=Toad qui meurt
 
 advancements.mubble.root.title=Mubble
