--- a/resources/assets/mubble/lang/io.lang
+++ b/resources/assets/mubble/lang/io.lang
@@ -20,31 +20,31 @@ tile.golden_brick_block.name=Bloko briko oro
 tile.note_block.name=Bloko noto
 tile.super_note_block.name=Bloko figuranto noto
 
-tile.blue_tetris_block.name=Blue Tetris Block
-tile.light_blue_tetris_block.name=Light Blue Tetris Block
-tile.green_tetris_block.name=Green Tetris Block
-tile.yellow_tetris_block.name=Yellow Tetris Block
-tile.orange_tetris_block.name=Orange Tetris Block
-tile.red_tetris_block.name=Red Tetris Block
-tile.purple_tetris_block.name=Purple Tetris Block
-tile.gray_tetris_block.name=Gray Tetris Block
-tile.tetris_glass.name=Tetris Glass
-tile.japanese_tetris_cushion.name=Japanese Tetris Cushion
-tile.rainbow_tetris_scaffolding.name=Rainbow Tetris Scaffolding
-tile.monochrome_tetris_scaffolding.name=Monochrome Tetris Scaffolding
+tile.blue_tetris_block.name=Bloko Tetris blua
+tile.light_blue_tetris_block.name=Bloko Tetris klara blua
+tile.green_tetris_block.name=Bloko Tetris verda
+tile.yellow_tetris_block.name=Bloko Tetris flava
+tile.orange_tetris_block.name=Bloko Tetris oranjea
+tile.red_tetris_block.name=Bloko Tetris reda
+tile.purple_tetris_block.name=Bloko Tetris purpuro
+tile.gray_tetris_block.name=Bloko Tetris griza
+tile.tetris_glass.name=Spegulo Tetris
+tile.japanese_tetris_cushion.name=Kuseno Tetris japoniano
+tile.rainbow_tetris_scaffolding.name=Eshafodo Tetris pluvarko
+tile.monochrome_tetris_scaffolding.name=Eshafodo Tetris solakoloro
 
-tile.iron_scaffolding.name=Iron Scaffolding
-tile.purple_bricks.name=Purple Bricks
-tile.cyan_bricks.name=Cyan Bricks
-tile.elder_pebbles.name=Elder Pebbles
-tile.space_matter.name=Space Matter
+tile.iron_scaffolding.name=Eshafodo fero
+tile.purple_bricks.name=Briko purpuro
+tile.cyan_bricks.name=Briko ciana
+tile.elder_pebbles.name=Senioro stoneto
+tile.space_matter.name=Materio spaco
 
-item.vanadium.name=Vanadium
-item.wheat_flour.name=Wheat Flour
-item.caramel_cube.name=Caramel Cube
-item.crepe.name=Crêpe
-item.chocolate_crepe.name=Chocolate Crêpe
-item.caramel_crepe.name=Caramel Crêpe
+item.vanadium.name=Vanadio
+item.wheat_flour.name=Farino di frumento 
+item.caramel_cube.name=Kubo di karamelo
+item.crepe.name=Krepo
+item.chocolate_crepe.name=Krepo di chokolado
+item.caramel_crepe.name=Krepo di karamelo
 
 item.super_mushroom.name=Super Mushroom
 item.peach.name=Peach
@@ -72,4 +72,4 @@ advancements.mubble.get_coin.description=Find coins
 advancements.mubble.get_vanadium.title=Vanadiums!
 advancements.mubble.get_vanadium.description=Acquire vanadiums
 advancements.mubble.get_tetris_block.title=It's All Connected
-advancements.mubble.get_tetris_block.description=Get your hand on a Tetris Block
+advancements.mubble.get_tetris_block.description=Get your hand on a bloko Tetris
