--- a/resources/assets/mubble/lang/en_ud.lang
+++ b/resources/assets/mubble/lang/en_ud.lang
@@ -1,5 +1,5 @@
-itemGroup.nintendo_items_tab=sɯǝʇI opuǝʇuᴉN
-itemGroup.nintendo_blocks_tab=sʞɔolᗺ opuǝʇuᴉN
+itemGroup.mubble_items_tab=sɯǝʇI ǝlqqnW
+itemGroup.mubble_blocks_tab=sʞɔolᗺ ǝlqqnW
 
 tile.vanadium_block.name=ɯnᴉpɐuɐΛ ɟo ʞɔolᗺ
 tile.vanadium_ore.name=ǝɹO ɯnᴉpɐuɐΛ
