--- a/resources/assets/mubble/lang/io.lang
+++ b/resources/assets/mubble/lang/io.lang
@@ -1,5 +1,5 @@
-itemGroup.nintendo_items_tab=Hav-ajo Nintendo
-itemGroup.nintendo_blocks_tab=Blokos Nintendo
+itemGroup.mubble_items_tab=Hav-ajo Mubble
+itemGroup.mubble_blocks_tab=Blokos Mubble
 
 tile.vanadium_block.name=Bloko di vanadio
 tile.vanadium_ore.name=Erco di vanadio
